Fix content layout shift on page reload

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -131,4 +131,8 @@
     [x-cloak] {
         display: none !important;
     }
+
+    .overflow-anchor-none {
+        overflow-anchor: none;
+    }
 }
